[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/Inventory.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Tools/TaskManager.tscn" type="PackedScene" id=2]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.85016
margin_top = 0.663422
margin_right = -3.85016
margin_bottom = 0.663452
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TabContainer" type="TabContainer" parent="CanvasLayer"]
margin_left = 169.462
margin_top = 74.561
margin_right = 851.462
margin_bottom = 454.561
tab_align = 0

[node name="Quests & Tasks" type="PanelContainer" parent="CanvasLayer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Split" type="VBoxContainer" parent="CanvasLayer/TabContainer/Quests & Tasks"]
margin_left = 7.0
margin_top = 7.0
margin_right = 667.0
margin_bottom = 337.0

[node name="Panel" type="Panel" parent="CanvasLayer/TabContainer/Quests & Tasks/Split"]
margin_right = 660.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopContainer" type="VBoxContainer" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel"]
margin_top = 12.0
margin_right = 660.0
margin_bottom = 163.0
size_flags_vertical = 3

[node name="current Task" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer"]
margin_right = 660.0
margin_bottom = 14.0
text = "Current Task: "
align = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer"]
margin_top = 18.0
margin_right = 660.0
margin_bottom = 22.0

[node name="CurrentContainer" type="VBoxContainer" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer"]
editor/display_folded = true
margin_top = 26.0
margin_right = 660.0
margin_bottom = 40.0

[node name="Header" type="HBoxContainer" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer/CurrentContainer"]
editor/display_folded = true
margin_right = 660.0
margin_bottom = 14.0

[node name="name" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer/CurrentContainer/Header"]
margin_right = 128.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Name"

[node name="type" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer/CurrentContainer/Header"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Type"
align = 1

[node name="goal" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer/CurrentContainer/Header"]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Goal"
align = 1

[node name="time" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer/CurrentContainer/Header"]
margin_left = 396.0
margin_right = 524.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Time Limit"
align = 1

[node name="needed" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer/CurrentContainer/Header"]
margin_left = 528.0
margin_right = 660.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "# Needed"
align = 2

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer"]
margin_top = 44.0
margin_right = 660.0
margin_bottom = 48.0

[node name="decription" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer"]
margin_top = 52.0
margin_right = 660.0
margin_bottom = 66.0
text = "Task Description:"
align = 1

[node name="descriptionText" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Panel/TopContainer"]
margin_top = 70.0
margin_right = 660.0
margin_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "In the year 9, millions were murdered."
align = 1
valign = 1

[node name="Scroll" type="ScrollContainer" parent="CanvasLayer/TabContainer/Quests & Tasks/Split"]
margin_top = 167.0
margin_right = 660.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VContainer" type="VBoxContainer" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll"]
margin_right = 660.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll/VContainer"]
margin_right = 660.0
margin_bottom = 4.0

[node name="Header" type="HBoxContainer" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll/VContainer"]
margin_top = 8.0
margin_right = 660.0
margin_bottom = 22.0

[node name="name" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll/VContainer/Header"]
margin_right = 106.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Name"

[node name="type" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll/VContainer/Header"]
margin_left = 110.0
margin_right = 216.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Type"

[node name="goal" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll/VContainer/Header"]
margin_left = 220.0
margin_right = 326.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Goal"

[node name="time" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll/VContainer/Header"]
margin_left = 330.0
margin_right = 436.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Time Limit"

[node name="needed" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll/VContainer/Header"]
margin_left = 440.0
margin_right = 546.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "# Needed"

[node name="activate" type="Label" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll/VContainer/Header"]
margin_left = 550.0
margin_right = 660.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Start Task"
align = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/TabContainer/Quests & Tasks/Split/Scroll/VContainer"]
margin_top = 26.0
margin_right = 660.0
margin_bottom = 30.0

[node name="Options" type="PanelContainer" parent="CanvasLayer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TaskManager" parent="." instance=ExtResource( 2 )]
position = Vector2( 1281.76, 327.493 )
taskFileNames = PoolStringArray( "Task1", "Task2", "Task3" )
